--- a/WebHQ/sftp-config.json
+++ b/WebHQ/sftp-config.json
@@ -14,7 +14,7 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "192.168.1.101",
+    "host": "raspigsm",
     "user": "pi",
     "password": "raspberry",
     //"port": "22",
